--- a/about-us.html
+++ b/about-us.html
@@ -252,7 +252,7 @@
             
             <!-- Qualifications Section -->
             <h4 class=" fw-bold border-bottom pb-2">
-              <i class="fa-solid fa-stethoscope icon me-2 "></i>Experience
+              <i class="fa-solid fa-stethoscope icon me-2 "></i>Areas of Experience
           </h4>
           <ul class="list-unstyled">
               <li class="ft2"><i class="fa-solid fa-check-circle text-success me-2"></i> Complex trauma </li>
