--- a/privacy.html
+++ b/privacy.html
@@ -392,7 +392,7 @@
   <div class="col-md-4">
     <!-- Footer Copyright Start -->
     <div class="footer-copyright-text">
-      <p>Copyright © 2025 All Rights Reserved.</p>
+      <p>Copyright ©  All Rights Reserved.</p>
     </div>
     <!-- Footer Copyright End -->
   </div>
