--- a/services.html
+++ b/services.html
@@ -235,7 +235,7 @@ Group Session</a></li>
 <hr>
                     <h4>Areas of Experience</h4>
                      <hr>
-                    <ul class="wow fadeInUp">
+                    <!-- <ul class="wow fadeInUp">
                         <li class="m-1"> Self-esteem issues</li>
                         </ul>
                          <ul class="wow fadeInUp">
@@ -244,7 +244,7 @@ Group Session</a></li>
                         <ul class="wow fadeInUp">
                                                 <li ></i> Issues caused due to transitions in life</li>
                                                 </ul>
-<ul class="wow fadeInUp">
+                        <ul class="wow fadeInUp">
                         <li > Pre-Marital & Marital Counseling</li>
                         </ul>
                         <ul class="wow fadeInUp">
@@ -252,7 +252,29 @@ Group Session</a></li>
                         </ul>
                         <ul class="wow fadeInUp">
                         <li > Self- criticism and self-judgments</li>
-                    </ul>
+                    </ul> -->
+                    <ul class="wow fadeInUp">
+                      <li class="m-1"> Complex trauma </li>
+                      </ul>
+                      <ul class="wow fadeInUp">
+                        <li class="m-1"> Anxiety </li>
+                        </ul>
+                        <ul class="wow fadeInUp">
+                          <li class="m-1"> Depression </li>
+                          </ul>
+                          <ul class="wow fadeInUp">
+                            <li class="m-1"> Loneliness & Isolation </li>
+                            </ul>
+                            <ul class="wow fadeInUp">
+                              <li class="m-1"> Children and Adolescent counselling </li>
+                              </ul>
+                              <ul class="wow fadeInUp">
+                                <li class="m-1"> Parental counselling  </li>
+                                </ul>
+                                <ul class="wow fadeInUp">
+                                  <li class="m-1"> Remedial teaching (inclusive education) </li>
+                                  </ul>
+                                 
                     <hr>
    
                          
