--- a/services.html
+++ b/services.html
@@ -254,6 +254,22 @@ Group Session</a></li>
                         <li > Self- criticism and self-judgments</li>
                     </ul> -->
                     <ul class="wow fadeInUp">
+                      <li class="m-1"> Self-esteem issues</li>
+                        </ul>
+                         <ul class="wow fadeInUp">
+                        <li ></i> Daily life adjustment issues</li>
+                        </ul>
+                        <ul class="wow fadeInUp">
+                                                <li ></i> Issues caused due to transitions in life</li>
+                                                </ul>
+<ul class="wow fadeInUp">
+                        <li > Pre-Marital & Marital Counseling</li>
+                        </ul>
+                        <ul class="wow fadeInUp">
+                        <li > Grief & Bereavement</li>
+                        </ul>
+                        <ul class="wow fadeInUp">
+                        <li > Self- criticism and self-judgments</li>
                       <li class="m-1"> Complex trauma </li>
                       </ul>
                       <ul class="wow fadeInUp">
