--- a/services.html
+++ b/services.html
@@ -235,7 +235,7 @@ Group Session</a></li>
 <hr>
                     <h4>Areas of Experience</h4>
                      <hr>
-                    <!-- <ul class="wow fadeInUp">
+                    <ul class="wow fadeInUp">
                         <li class="m-1"> Self-esteem issues</li>
                         </ul>
                          <ul class="wow fadeInUp">
@@ -269,7 +269,8 @@ Group Session</a></li>
                         <li > Grief & Bereavement</li>
                         </ul>
                         <ul class="wow fadeInUp">
-                        <li > Self- criticism and self-judgments</li>
+                        <li > Self- criticism and self-judgments</li></ul>
+                    <ul>
                       <li class="m-1"> Complex trauma </li>
                       </ul>
                       <ul class="wow fadeInUp">
