--- a/services.html
+++ b/services.html
@@ -253,7 +253,7 @@ Group Session</a></li>
                         <ul class="wow fadeInUp">
                         <li > Self- criticism and self-judgments</li>
                     </ul> 
-                    <ul class="wow fadeInUp">
+<!--                     <ul class="wow fadeInUp">
                       <li class="m-1"> Self-esteem issues</li>
                         </ul>
                          <ul class="wow fadeInUp">
@@ -269,7 +269,7 @@ Group Session</a></li>
                         <li > Grief & Bereavement</li>
                         </ul>
                         <ul class="wow fadeInUp">
-                        <li > Self- criticism and self-judgments</li></ul>
+                        <li > Self- criticism and self-judgments</li></ul> -->
                     <ul>
                       <li class="m-1"> Complex trauma </li>
                       </ul>
